examples/pos/effects.effekt
module examples/pos/effects

effect Test {
  def get(): Int
}

def main() = println("hello")