examples/neg/cyclic_b.effekt
module cyclic_b

import examples/neg/cyclic_a

def main() = ()
